# Prometheus

./: CONTRIBUTING.md  Dockerfile  README.md  docker-compose.win_mac.yml  docker-compose.yml  example.env  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  discussion.md
.github/workflows/: pytest_and_coverage.yml  thank-stargazer.yml
docs/: Evaluation-log.md  GitHub-Issue-Debug-Guide.md  Multi-Agent-Architecture.md
docs/zh-CN/: README.md  开发指南.md  快速开始.md  最近更新.md  架构设计.md  核心概念.md  目录结构说明.md  相关论文.md  项目概述.md
prometheus/app/: dependencies.py  main.py
prometheus/app/api/: main.py
prometheus/chat_models/: custom_chat_openai.py
prometheus/configuration/: config.py  github.py
prometheus/docker/: base_container.py  general_container.py  user_defined_container.py
prometheus/exceptions/: docker_exception.py  evermind_exception.py  github_exception.py  llm_exception.py  memory_exception.py  web_search_tool_exception.py
prometheus/git/: git_repository.py  github_service.py
prometheus/graph/: file_graph_builder.py  graph_types.py  knowledge_graph.py
prometheus/models/: query.py
prometheus/neo4j/: knowledge_graph_handler.py
prometheus/parser/: file_types.py  tree_sitter_parser.py
prometheus/script/: create_superuser.py  github_issue_debug.py  test_llm_service.py
prometheus/tools/: container_command.py  file_operation.py  graph_traversal.py  web_search.py
prometheus/utils/: evermind_utils.py  github_sec.py  github_utils.py  issue_util.py  knowledge_graph_utils.py  lang_graph_util.py  llm_util.py  logger_manager.py  memory_utils.py  str_util.py
(+180 files in other folders)
