[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Prometheus"
version = "1.3.0"
dependencies = [
  "tree-sitter==0.25.2",
  "tree-sitter-language-pack==0.10.0",
  "neo4j==5.20.0",
  "fastapi[standard]>=0.115.2",
  "langchain==0.3.27",
  "langchain-anthropic==0.3.22",
  "langchain-openai==0.3.35",
  "langchain-google-genai==2.1.12",
  "langchain-google-vertexai==2.1.2",
  "igittigitt>=2.1.5",
  "litellm>=1.52.9",
  "GitPython>=3.1.43",
  "langgraph==0.2.41",
  "langgraph-checkpoint-postgres>=2.0.2",
  "dynaconf>=3.2.6",
  "docker>=7.1.0",
  "unidiff>=0.7.5",
  "argon2-cffi>=23.1.0",
  "sqlmodel==0.0.24",
  "asyncpg",
  "pyjwt==2.6.0",
  "mcp>=1.4.1",
  "tavily-python>=0.5.1",
  "langchain-mcp-adapters>=0.1.9",
  "httpx==0.28.1",
  "pexpect==4.9.0"
]
requires-python = ">= 3.11"

[project.optional-dependencies]
test = [
  "ruff>=0.9.1",
  "anyio",
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "pytest-asyncio==1.1.0",
  "pytest-tornasync",
  "pytest-trio",
  "pytest-twisted",
  "twisted",
  "testcontainers==4.8.2",
]

[tool.ruff]
indent-width = 4
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.pydocstyle]
convention = "google"
